# LittleGUI

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  functions.cmake
examples/: CMakeLists.txt
examples/cliapp/: CMakeLists.txt  main.cpp
examples/guiapp/: CMakeLists.txt
hw/vita/: CMakeLists.txt
src/: CMakeLists.txt  FindLittleGUI.cmake  library.cpp
src/core/: LGObject.cpp  LGObject.h  Logger.cpp  Logger.h  Macros.h  Mutex.h  Object.cpp  Object.h  Property.h  Signal.h  Singleton.h
tests/: CMakeLists.txt  test.cpp  test2.cpp
tests/core/: CMakeLists.txt  LGObject.cpp  Logger.cpp  Main.cpp  Property.cpp  Signal.cpp  Singleton.cpp
